--- a/portfolioWebsite/src/main/resources/templates/index.html
+++ b/portfolioWebsite/src/main/resources/templates/index.html
@@ -70,26 +70,26 @@
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 footer-about">
                     <a href="home.html" class="d-flex align-items-center">
-                        <span class="sitename">FlexStart</span>
+                        <span class="sitename">HJH's Portfolio</span>
                     </a>
                     <div class="footer-contact pt-3">
-                        <p>A108 Adam Street</p>
-                        <p>New York, NY 535022</p>
+                        <p>인천 남동구 구월동 1554 이하 개인정보</p>
                         <p class="mt-3"><strong>Phone:</strong> <span>+82 010 4175 6818</span></p>
                         <p><strong>Email:</strong> <span>h_leopold@naver.com</span></p>
                     </div>
                 </div>
-<!--
+                
                 <div class="col-lg-2 col-md-3 footer-links">
-                    <h4>Our Services</h4>
+                    <h4> </h4>
                     <ul>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-                        <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+                    	<li></li>
+                    	<li></li>
+                    	<li></li>
+                    	<li></li>
+                    	<li></li>
+                        <!--<li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>-->
                     </ul>
                 </div>
--->                
 
 				<div class="col-lg-2 col-md-3 footer-links">
                     <h4>Useful Links</h4>
@@ -105,9 +105,9 @@
                     <h4>Follow Me</h4>
                     <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
                     <div class="social-links d-flex">
-                        <a href=""><i class="bi bi-github"></i></a>
-                        <a href=""><i class="bi bi-twitter-x"></i></a>
+                        <a href="https://github.com/backendVirtuoso"><i class="bi bi-github"></i></a>
                         <a href=""><i class="bi bi-instagram"></i></a>
+                        <a href=""><i class="bi bi-twitter-x"></i></a>
                         <a href=""><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
